--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <label for="frequency-input">Frequency (min)</label>
                 <input class="form-control" id="frequency-input" type="text">
               </div>
-              <button class="btn btn-primary float-right" id="add-train-btn">Submit</button>
+              <button class="btn btn-primary float-left" id="add-train-btn">Submit</button>
             </form>
 
           </div>
