--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <tr>
                   <th scope="col">Train Name</th>
                   <th scope="col">Destination</th>
-                  <th scope="col">Frequency</th>
+                  <th scope="col">Frequency (min)</th>
                   <th scope="col">Next Arrival</th>
                   <th scope="col">Minutes Away</th>
                 </tr>
